fix: resolve all C/H/M/L audit issues (nexjobsp)
Critical:
- C-1: Sanitize ad HTML with DOMPurify (XSS prevention)

High:
- H-1/H-7: Wire Zod validation to all API routes
- H-2: CMS_TOKEN required in production
- H-3: Replace img with next/image for avatars
- H-4: Split 1100-line profile page into dynamic imports
- H-5: Extract pure utils from useJobSearch (501->409 lines)
- H-6: Atomic skills update with rollback

Medium:
- M-1: Document CSP unsafe-inline necessity (GTM/ads)
- M-2: Remove http: from CSP img-src
- M-3: Add frame-ancestors to CSP
- M-4: Gate storage config behind env check
- M-5: Document protected routes convention
- M-6: Bound page/limit params
- M-8: Fix canonical trailing slash
- M-9/M-10: Add server component TODO markers
- M-11: Document cache() dedup purpose
- M-12: Fix useSearchHistory useCallback deps
- M-13/M-14/M-15: Document service layer decisions
- M-16: Validate popup ad URLs
- M-17: Document types/job.ts re-export
- M-18: Make MongoDB _id/id_obj optional
- M-19: Cap rate-limit store at 50k entries

Low:
- L-1: Complete .env.example
- L-2: Remove placeholder social URLs
- L-3: Use config.site.name in mobile menu
- L-4: Add prefetch=false + TODO for footer links
- L-6: Auto-track page views on pathname change
- L-7: Add AbortController timeout to cmsUserApi
- L-9: Move config validation to server-side
- L-10: Document PM2 fork mode trade-off
- L-11: Guard initials with .filter(Boolean)
- L-12: Cap bookmarks at 200 entries
- L-13: Add mobile-optimized image sizes
- L-14: Document rate-limit IP fallback

--- a/.env.example
+++ b/.env.example
@@ -49,7 +49,14 @@ NEXT_PUBLIC_FEATURE_SOCIAL_SHARE=true
 NEXT_PUBLIC_FEATURE_ADVANCED_SEARCH=true
 NEXT_PUBLIC_FEATURE_OPTIMISTIC_UPDATES=true
 
+# Rate Limiting
+RATE_LIMIT_MAX_REQUESTS=100
+RATE_LIMIT_WINDOW_SECONDS=60
+
+# CMS Provider (only 'tugascms' is supported)
+CMS_PROVIDER=tugascms
+
 # Development
-NODE_ENV=production
+NODE_ENV=development
 PORT=5000
 LOG_LEVEL=info
