--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/sanitize-html": "^2.16.0",
     "@vercel/og": "^0.8.5",
     "date-fns": "^4.1.0",
+    "dompurify": "^3.3.1",
     "lucide-react": "^0.487.0",
     "next": "^16.1.1",
     "react": "^19.2.3",
@@ -31,6 +32,7 @@
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.1",
+    "@types/dompurify": "^3.0.5",
     "@types/jest": "^30.0.0",
     "@types/node": "20.19.2",
     "@types/react": "^19.2.14",
